# ml_biz_app

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py  schema.py
app/test/: test_batch_predict_req.json  test_predict_req.json
data/: cleaned_telco_data.csv  cleaned_telco_data_no_OHE.csv  mean_std.csv
model/: Telco_data_cleaning.ipynb  column_dropper.py  model_features.py  model_training.ipynb  predict.py  telco_data_cleaning.py  train_catboost.py
model/models/: catboost_model.cbm  model_pipeline.joblib
