[project]
name = "ml-biz-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Cheryl Jennings",email = "cheryl47@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.121.1,<0.122.0)",
    "pandas[excel] (>=2.3.3,<3.0.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "xgboost (>=3.1.1,<4.0.0)",
    "imblearn (>=0.0,<0.1)",
    "joblib (>=1.5.2,<2.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)"
]
